# MLEngineering

./: .gitignore
lab1/: config.yaml  pyproject.toml
lab1/src/: config.py  data.py  train.py
lab2/: config.yaml
lab2/src/: config.py  train.py
lab3/: .gitignore  README_DVC.md  config.yaml  dvc.yaml  params.yaml  pyproject.toml
lab3/.dvc/: config
lab3/datasets/registry/: .gitignore
lab3/src/: config.py  data.py  download_data.py  evaluate.py  run_experiments.py  train.py
lab4/: .gitignore  README_MLFLOW.md  params.yaml  pyproject.toml
lab4/src/: combine_batches.py  config.py  evaluate.py  mlflow_server.py  run_experiments.py  train.py
