[project]
name = "lab-1-example"
version = "0.01"
description = "Training pipeline for deep learning model"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.1.0+cu118",
  "torchvision==0.16.0+cu118",
  "tqdm==4.64.1",
  "matplotlib==3.6.3",
  "numpy==1.22.4",
  "pyyaml==6.0",
  "scipy==1.13.0rc1",
  "pandas>2.0",
]

[dependency-groups]
dev = [
  "mypy==0.991",
  "ruff==0.0.254",
  "black==23.1.0",
  "isort==5.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_1_example"]
