[project]
name = "lab-1-example"
version = "0.01"
description = "Training pipeline for deep learning model"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.7.0",
  "torchvision==0.22.0",
  "tqdm==4.64.1",
  "matplotlib==3.6.3",
  "numpy==1.22.4",
  "pathspec<0.13",
  "pyyaml==6.0",
  "scipy==1.13.0rc1",
  "pandas>2.0",
  "dvc[s3]==3.59.1",
  "mlflow==2.22.0",
]

[dependency-groups]
dev = [
  "mypy==0.991",
  "ruff==0.0.254",
  "black==23.1.0",
  "isort==5.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_1_example"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
